cmake_minimum_required(VERSION 3.0)
project("rif-cmd" CXX)

function(lib_name OS)
   link_directories("RadeonImageFilter/${OS}/Dynamic" "RadeonImageFilter/${OS}/Static")
endfunction()

if(WIN32)
   lib_name("Windows")
elseif(UNIX)
   if(EXISTS "/etc/debian_version" OR "/etc/ubuntu_version")
      lib_name("Ubuntu18")
   elseif(EXISTS "/etc/centos_version")
      lib_name("CentOS7")
   endif()
elseif(APPLE)
   lib_name("OSX")
else()
   message("not support OS")
   return()
endif()

add_executable("rif-cmd" "src/rif-cmd.cpp" "src/set-param.cpp")
target_link_libraries("rif-cmd" "RadeonImageFilters")
